# ersap-tridas

./: CMakeLists.txt  README.md  build.gradle  services.yaml  settings.gradle  tridas.clara  tridas.yaml
data/: README
engine/: README
gradle/wrapper/: gradle-wrapper.properties
service/src/: CMakeLists.txt  tridas-service.cpp  tridas-service.hpp
src/main/java/org/jlab/ersap/tridas/: TDecodeWorkerFactory.java  TDecodeWorkerPool.java  TDecoder.java  TDecoderZMQ.java  TPDWorker.java  TPrintStatistics.java  TReceiver.java  TRingRawEvent.java  TRingRawEventFactory.java  TridasReceiverDecoder.java
src/main/java/org/jlab/ersap/tridas/ana/: DataFile2HipoBank.java
src/main/java/org/jlab/ersap/tridas/engine/io/: ETReceiverDecoderStream.java  ETWriter.java
src/main/java/org/jlab/ersap/tridas/engine/proc/: EDummyEngine.java
src/main/java/org/jlab/ersap/tridas/file/: TReader.java  TridasReaderDecoder.java
src/main/java/org/jlab/ersap/tridas/stream/: TReceiver.java  TReceiverZMQ.java  TridasReceiverDecoder.java
src/main/resources/: ETReceiverDecoderStream.yaml  ETWriter.yaml
